--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <button class="btn btn-outline-danger">Ver mas..</button>
     </section>
 </main>
-<footer class="bg-darl text-light py-3 text-center">
+<footer class="bg-dark text-light py-3 text-center">
     <p>&copy; Todos los derechos reservados</p>
 </footer>
 <body>
